--- a/public/index.html
+++ b/public/index.html
@@ -16,18 +16,18 @@
             </ul>
         </blockquote>
         <h3>Example creation usage:</h3>
-        <code>https://camper-api-project-mrcodex.c9users.io/new/https://www.google.com</code>
+        <code>https://szz.herokuapp.com/new/https://www.google.com</code>
         <br/>
-        <code>https://camper-api-project-mrcodex.c9users.io/new/http://foo.com:80</code>
+        <code>https://szz.herokuapp.com/new/http://foo.com:80</code>
         
         <h3>Example creation output</h3>
         <code>{
           "original_url":"http://foo.com:80",
-          "short_url":"https://camper-api-project-mrcodex.c9users.io/8170"
+          "short_url":"https://szz.herokuapp.com/8170"
         }</code>
         
         <h3>Usage:</h3>
-        <code>https://camper-api-project-mrcodex.c9users.io/2871</code>
+        <code>https://szz.herokuapp.com/10</code>
         <h3>Will redirect to:</h3>
         <code>https://www.google.com/</code>
     </div>
