--- a/public/index.html
+++ b/public/index.html
@@ -30,5 +30,11 @@
         <code>https://szz.herokuapp.com/10</code>
         <h3>Will redirect to:</h3>
         <code>https://www.google.com/</code>
+        
+         <p>
+            <a target="_blank" href="https://www.freecodecamp.com/challenges/url-shortener-microservice">
+                freeCodeCamp project
+            </a>
+        </p>
     </div>
 </body>
